Fix retr for binary files
also add guard for using send before retr
and move all filesystem files to 'fs' package